@@ -1,6 +1,10 @@
 SimGrid (3.8) NOT RELEASED; urgency=low
 
  The "SimGrid makes psssshiiiit and jumps into the cloud" release.
+ 
+ CMAKE:
+ * Remove option custom_flags. Now use environment variables CFLAGS 
+   and LDFLAGS.
   
  MSG:
  * Add an experimental interface to manipulate VMs. They are mainly
